--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-body{background-color:#8383a2e6 !important;}
+body{background-color:#2c2c48e6 !important;}
 .row-principal{margin-top:7vh;}
 #row-left__img{
     background-image: url('../images/bg1.jpg') !important;
@@ -15,9 +15,9 @@ body{background-color:#8383a2e6 !important;}
     border-radius:50%;
     margin-bottom:30px;
 }
-.divRight-form__align{margin-top:10vh}
+.divRight-form__align{margin-top:17vh}
 .divright_input_size{width:47vh !important;}
-
+.inputCtrl{width:84% !important;margin-top:2.6%;}
 .divright_p {
     font-weight: lighter;
     font-size: 14px;
