--- a/src/main/resources/templates/Home/Login.html
+++ b/src/main/resources/templates/Home/Login.html
@@ -54,8 +54,16 @@
                         <label class="custom-control-label" for="customCheck">Remember Me</label>
                       </div>
                     </div>
+                    
                     <input type="submit" class="btn btn-dark form-submit__width" value="Entrar"  />
-                 <hr/>                    
+                 <hr/>     
+                 <br/>    
+                 <br/>   
+                 <br/>        
+                 <br/>   
+                 <br/>     
+                 <br/>   
+                 <br/>     
                   </form>
                   
 
@@ -72,14 +80,14 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="@{vendor/jquery/jquery.min.js}"></script>
-  <script src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script th:src="@{vendor/jquery/jquery.min.js}"></script>
+  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
+  <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="@{js/sb-admin-2.min.js}"></script>
+  <script th:src="@{js/sb-admin-2.min.js}"></script>
 
 </body>
 
