--- a/src/main/resources/templates/Home/Login.html
+++ b/src/main/resources/templates/Home/Login.html
@@ -55,7 +55,7 @@
                       </div>
                     </div>
                     
-                    <input type="submit" class="btn btn-dark form-submit__width" value="Entrar"  />
+                    <input type="submit" class="btn btn-primary form-submit__width btn-block" value="Entrar"  />
                  <hr/>     
                  <br/>    
                  <br/>   
