--- a/src/main/resources/templates/Aluno/ListAluno.html
+++ b/src/main/resources/templates/Aluno/ListAluno.html
@@ -167,7 +167,7 @@
                                         <td class="cell100 column4"><span th:text="${alunos.email}"> </span></td>
                                         <td class="cell100 column5"><span th:text="${alunos.cpf}"> </span></td>
                                         <td ><button class="btn btn-outline-primary fas fa-eye" href="ProfVisualizaAluno.html" role="button"></button>
-                                            <a class="btn btn-outline-secondary fas fa-edit" th:href="@{|/edita/${alunos.id}|}"></a>
+                                            <a class="btn btn-outline-secondary fas fa-edit" id="avaliar" th:href="@{|/avaliacao/${alunos.id}|}"></a>
                                             <button class="btn btn-outline-danger delete Button fas fa-trash-alt" th:attr="value=${alunos.id}" ></button>
                                         </td>
                                     </tr>
