--- a/src/main/resources/templates/Fragments/footer.html
+++ b/src/main/resources/templates/Fragments/footer.html
@@ -1,8 +1,6 @@
 <footer th:fragment="footer">
-    <script th:src="@{/vendor/jquery/jquery-3.2.1.min.js}"></script>
-    <script th:src="@{/vendor/bootstrap/js/popper.js}"></script>
-    <script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{/vendor/select2/select2.min.js}"></script>
-    <script th:src="@{/vendor/perfect-scrollbar/perfect-scrollbar.min.js}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/functions.js}"></script>
+    <script src="js/sb-admin-2.min.js"></script>
 </footer>
