--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -4,11 +4,10 @@
         
         <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
         <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/> 
-	<link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}"/>
-        <link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{css/sb-admin-2.min.css}"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/perfect-scrollbar/perfect-scrollbar.css}"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>        
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"/>    
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
 </head>
