--- a/src/main/resources/templates/Home/Login.html
+++ b/src/main/resources/templates/Home/Login.html
@@ -15,7 +15,7 @@
 
   <!-- Custom fonts for this template-->
   <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css"/>
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" type="text/css"/>
 
   <!-- Custom styles for this template-->
   <link th:href="@{css/sb-admin-2.min.css}" rel="stylesheet"/>
@@ -55,7 +55,7 @@
                       </div>
                     </div>
                     
-                    <input type="submit" class="btn btn-primary form-submit__width btn-block" value="Entrar"  />
+                    <input type="submit" class="btn btn-primary form-submit__width " value="Entrar"  />
                  <hr/>     
                  <br/>    
                  <br/>   
@@ -82,10 +82,8 @@
   <!-- Bootstrap core JavaScript-->
   <script th:src="@{vendor/jquery/jquery.min.js}"></script>
   <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
   <!-- Core plugin JavaScript-->
   <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
-
   <!-- Custom scripts for all pages-->
   <script th:src="@{js/sb-admin-2.min.js}"></script>
 
