--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/> 
         <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}"/>
         <link rel="stylesheet" type="text/css" th:href="@{css/sb-admin-2.min.css}"/>
-
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"/>    
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
